# MiniDFS

./: .gitignore  CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md
data/: .gitignore
include/: client.h  datanode.h  namenode.h
include/common/: config.h  logger.h
proto/: dfs.proto
src/: client.cpp  datanode.cpp  main_client.cpp  main_datanode.cpp  main_namenode.cpp  namenode.cpp
src/common/: config.cpp  logger.cpp
tests/: CMakeLists.txt  test_client.cpp  test_datanode.cpp  test_namenode.cpp
